# ZBuffer-Scanline-Renderer

./: .gitattributes  CMakeLists.txt  README.md  uncrustify.cfg
include/: Camera.h  Geometry.h  HelperTools.h  MainWindow.h  Model.h  ResourceManager.h  Shader.h  SimpleResources.h  ZBufferScanLine.h
resources/models/T-90/: T-90.mtl
resources/models/house_obj/: house_diffuse.tga  house_obj.mtl
resources/models/nanosuit_reflection/: nanosuit.mtl
resources/models/p21/: Main_Defuse.tga  Minigun_Defuse.tga  Ministand_Defuse.tga  Track_Def.tga  p21.mtl
resources/shaders/: screenShader.frag  screenShader.vert
src/: Camera.cpp  Main.cpp  MainWindow.cpp  Model.cpp  ResourceManager.cpp  Shader.cpp  ZBufferScanLine.cpp
